feat: 竞赛创建功能实现
