# internal/router/app.go
@@ -35,7 +35,8 @@ func Router() *gin.Engine {
 	r.GET("/category-list", service.GetCategoryList)
 
 	// 管理员私有方法
-	authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
+	// authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
+	authAdmin := r.Group("/admin")
 	//authAdmin := r.Group("/admin")
 	// 问题创建
 	authAdmin.POST("/problem-create", service.ProblemCreate)
@@ -49,6 +50,8 @@ func Router() *gin.Engine {
 	authAdmin.DELETE("/category-delete", service.CategoryDelete)
 	// 获取测试案例
 	authAdmin.GET("/test-case", service.GetTestCase)
+	// 竞赛创建
+	authAdmin.POST("/contest-create", service.ContestCreate)
 
 	// 用户私有方法
 	authUser := r.Group("/user", middlewares.AuthUserCheck())
